@@ -1,4 +1,166 @@
 ------------------------------------------------------------------------
+r740 | deepayan | 2013-03-24 19:33:09 +0530 (Sun, 24 Mar 2013) | 1 line
+Changed paths:
+   M /pkg/DESCRIPTION
+   M /pkg/R/legend.R
+
+bugfix to allow 'fill' in legend symbols
+------------------------------------------------------------------------
+r739 | deepayan | 2013-03-16 02:09:41 +0530 (Sat, 16 Mar 2013) | 1 line
+Changed paths:
+   M /pkg/DESCRIPTION
+   M /pkg/man/cloud.Rd
+
+fixed doc typo
+------------------------------------------------------------------------
+r738 | deepayan | 2013-03-11 17:10:08 +0530 (Mon, 11 Mar 2013) | 1 line
+Changed paths:
+   D /pkg/LICENSE
+   A /pkg/LICENSE.note (from /pkg/LICENSE:737)
+
+Renamed LICENSE (because it isn't really the license, and check complains)
+------------------------------------------------------------------------
+r737 | deepayan | 2013-01-09 00:48:37 +0530 (Wed, 09 Jan 2013) | 1 line
+Changed paths:
+   M /pkg/DESCRIPTION
+   M /pkg/NAMESPACE
+   M /pkg/R/bwplot.R
+   M /pkg/R/levelplot.R
+   M /pkg/R/miscellaneous.R
+   M /pkg/R/panels.R
+   M /pkg/inst/po/de/LC_MESSAGES/R-lattice.mo
+   M /pkg/po/R-de.po
+   M /pkg/po/R-lattice.pot
+
+remove use of methods::hasArg() by replicating functionality in hasGroupNumber()
+------------------------------------------------------------------------
+r736 | deepayan | 2013-01-08 23:15:46 +0530 (Tue, 08 Jan 2013) | 1 line
+Changed paths:
+   M /pkg/DESCRIPTION
+   M /pkg/tests/test.R
+
+add test for histogram(type='density')
+------------------------------------------------------------------------
+r735 | deepayan | 2013-01-08 00:06:39 +0530 (Tue, 08 Jan 2013) | 1 line
+Changed paths:
+   M /pkg/R/histogram.R
+
+remove use of deprecated hist()
+------------------------------------------------------------------------
+r734 | deepayan | 2013-01-08 00:02:33 +0530 (Tue, 08 Jan 2013) | 1 line
+Changed paths:
+   M /pkg/update.sh
+
+update
+------------------------------------------------------------------------
+r733 | deepayan | 2012-09-13 15:16:23 +0530 (Thu, 13 Sep 2012) | 1 line
+Changed paths:
+   M /pkg/R/levelplot.R
+   M /pkg/man/levelplot.Rd
+
+panel.levelplot bugfix for length-1 at
+------------------------------------------------------------------------
+r732 | deepayan | 2012-09-13 14:41:30 +0530 (Thu, 13 Sep 2012) | 1 line
+Changed paths:
+   M /pkg/po/R-de.po
+
+German translation update
+------------------------------------------------------------------------
+r731 | deepayan | 2012-09-03 15:46:59 +0530 (Mon, 03 Sep 2012) | 1 line
+Changed paths:
+   M /pkg/DESCRIPTION
+   M /pkg/inst/po/de/LC_MESSAGES/R-lattice.mo
+   M /pkg/inst/po/en@quot/LC_MESSAGES/R-lattice.mo
+   M /pkg/inst/po/fr/LC_MESSAGES/R-lattice.mo
+   M /pkg/po/R-de.po
+   M /pkg/po/R-en@quot.po
+   M /pkg/po/R-fr.po
+   M /pkg/po/R-lattice.pot
+   A /pkg/po/R-pl_PL.po
+
+translation updates
+------------------------------------------------------------------------
+r730 | deepayan | 2012-08-27 12:51:12 +0530 (Mon, 27 Aug 2012) | 1 line
+Changed paths:
+   M /pkg/R/legend.R
+
+bugfix: more instances of rep(NULL)
+------------------------------------------------------------------------
+r729 | paul | 2012-07-26 04:21:37 +0530 (Thu, 26 Jul 2012) | 1 line
+Changed paths:
+   M /pkg/R/levelplot.R
+
+fix to make contour line and label grob names unique
+------------------------------------------------------------------------
+r728 | deepayan | 2012-07-22 00:54:53 +0530 (Sun, 22 Jul 2012) | 1 line
+Changed paths:
+   M /pkg/R/panel.superpose.R
+   M /pkg/man/print.trellis.Rd
+
+fixed incorrect rep(NULL) usage
+------------------------------------------------------------------------
+r727 | deepayan | 2012-07-13 22:54:50 +0530 (Fri, 13 Jul 2012) | 1 line
+Changed paths:
+   M /pkg/DESCRIPTION
+   M /pkg/R/legend.R
+   M /pkg/man/levelplot.Rd
+   M /pkg/po/R-lattice.pot
+
+Added support for 'tck' in levelplot colorkeys
+------------------------------------------------------------------------
+r726 | deepayan | 2012-06-23 12:57:04 +0530 (Sat, 23 Jun 2012) | 1 line
+Changed paths:
+   M /pkg/R/legend.R
+
+improved name matching for colorley 'labels'
+------------------------------------------------------------------------
+r725 | deepayan | 2012-06-22 17:54:40 +0530 (Fri, 22 Jun 2012) | 1 line
+Changed paths:
+   M /pkg/man/lattice.options.Rd
+   M /pkg/man/xyplot.Rd
+
+doc updates
+------------------------------------------------------------------------
+r724 | deepayan | 2012-06-09 02:22:26 +0530 (Sat, 09 Jun 2012) | 1 line
+Changed paths:
+   M /pkg/DESCRIPTION
+   M /pkg/man/trellis.device.Rd
+
+doc update
+------------------------------------------------------------------------
+r723 | deepayan | 2012-06-08 09:29:42 +0530 (Fri, 08 Jun 2012) | 1 line
+Changed paths:
+   M /pkg/R/print.trellis.R
+   M /pkg/R/settings.R
+   M /pkg/R/zzz.R
+
+Clean up lattice.status list whenever new page starts.  This should
+fix lattice bug #1629
+------------------------------------------------------------------------
+r722 | deepayan | 2012-05-05 15:10:19 +0530 (Sat, 05 May 2012) | 1 line
+Changed paths:
+   M /pkg/DESCRIPTION
+   M /pkg/R/layout.R
+
+Made user-specified options for layout.widths|heights for labels and
+keys more robust, by refusing to replace by plot-determined values
+unless units match.  This allows specification of absolute unit values
+for labels and legends.
+------------------------------------------------------------------------
+r721 | deepayan | 2012-04-23 16:47:05 +0530 (Mon, 23 Apr 2012) | 1 line
+Changed paths:
+   M /pkg/man/trellis.par.get.Rd
+
+Additional documentation for trellis.par.get (partially done)
+------------------------------------------------------------------------
+r720 | deepayan | 2012-03-10 14:43:53 +0530 (Sat, 10 Mar 2012) | 1 line
+Changed paths:
+   M /pkg/NEWS
+   M /pkg/SvnLog
+   M /pkg/po/R-lattice.pot
+
+log/news updates
+------------------------------------------------------------------------
 r719 | deepayan | 2012-03-10 14:39:50 +0530 (Sat, 10 Mar 2012) | 1 line
 Changed paths:
    M /pkg/DESCRIPTION
